--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.428.0",
+    "mongoose": "^8.5.3",
     "next": "14.2.5",
     "next-auth": "5.0.0-beta.20",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
